Refactor Range::GetBorderAndTextQuads()

This patch changes |Range::GetBorderAndTextQuads()| to utilize early-continue
style, const pointer and const variable for improving source code readability.

Bug: 757720
Change-Id: I0f3b1cfb9eb7971da94133df55c1e337fb36556e
Reviewed-on: https://chromium-review.googlesource.com/625554
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496267}
Former-commit-id: 816c5e63c869a200146fa3c7bff8c3fb776fd381